[workspace]
resolver = "2"
members = [ 
	"crates/plugin",
	"crates/kraken",
	"crates/rp2gen"
]

[workspace.dependencies]
dt-plugin-kraken = { path = "./crates/kraken" }

anyhow = "1"
csv = "1.3"
clap = { version = "4.5", features = ["cargo", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_test = { version = "1" }
thiserror = "1"
tracing = "0.1"
mockall = "0.12"
trybuild = "1"
tracing-subscriber = "0.3"
