[workspace]
resolver = "2"
members = [ 
	"crates/tax",
	"crates/ini",
	"crates/kraken",
]

[workspace.dependencies]
dungeon-ini = { path = "crates/ini" }
dungeon-tax = { path = "crates/tax" }
dungeon-kraken = { path = "crates/kraken" }

anyhow = "1"
csv = "1.3"
clap = { version = "4.5", features = ["cargo", "env"] }
chrono = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_test = { version = "1" }
toml = { version = "0.8" }
thiserror = "1"
tracing = "0.1"
mockall = "0.12"
trybuild = "1"
tracing-subscriber = "0.3"
indoc = "2"
nom = "7"
