[package]
name = "dungeon-ini"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, optional = true }
nom = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
serde_test = { workspace = true }

[features]
serde = ["dep:serde"]
