[package]
name = "dt-plugin-kraken"
version = "0.1.0"
edition = "2021"

[dependencies]
dt-plugin = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_test = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
