[package]
name = "rp2gen"
version = "0.1.0"
edition = "2021"

[dependencies]
dungeon-ini = { workspace = true }
dungeon-kraken = { workspace = true }
dungeon-tax = { workspace = true, features = ["xlsx"] }

csv = { workspace = true }
rust_xlsxwriter = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true	}
