[package]
name = "dungeon-tax"
version = "0.1.0"
edition = "2021"

[dependencies]
dungeon-ini = { workspace = true, features = ["serde"] }
csv = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# testing dependencies
[dev-dependencies]
indoc = { workspace = true }
serde_test = { workspace = true }
